--- a/dockprom/docker-compose.yml
+++ b/dockprom/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       # HTTP router
       - "traefik.http.routers.prometheus.entrypoints=web"
       - "traefik.http.routers.prometheus.rule=Host(`${PROMETHEUS_DOMAIN:-prometheus.localhost}`)"
-      - "traefik.http.routers.prometheus.middlewares=local-service@file,force-http@file"
+      - "traefik.http.routers.prometheus.middlewares=local-service@file"
       - "traefik.http.services.prometheus.loadbalancer.server.port=9090"
       
   alertmanager:
@@ -45,7 +45,7 @@ services:
       # HTTP router
       - "traefik.http.routers.alertmanager.entrypoints=web"
       - "traefik.http.routers.alertmanager.rule=Host(`${ALERTMANAGER_DOMAIN:-alertmanager.localhost}`)"
-      - "traefik.http.routers.alertmanager.middlewares=local-service@file,force-http@file"
+      - "traefik.http.routers.alertmanager.middlewares=local-service@file"
       - "traefik.http.services.alertmanager.loadbalancer.server.port=9093"
 
   nodeexporter:
@@ -109,7 +109,7 @@ services:
       # HTTP router
       - "traefik.http.routers.grafana.entrypoints=web"
       - "traefik.http.routers.grafana.rule=Host(`${GRAFANA_DOMAIN:-grafana.localhost}`)"
-      - "traefik.http.routers.grafana.middlewares=local-service@file,force-http@file"
+      - "traefik.http.routers.grafana.middlewares=local-service@file"
       - "traefik.http.services.grafana.loadbalancer.server.port=3000"
 
   pushgateway:
