--- a/traefik/config/configuration.yaml.example
+++ b/traefik/config/configuration.yaml.example
@@ -4,8 +4,10 @@ http:
     local-service:
       ipWhiteList:
         sourceRange:
-          - "127.0.0.1/32"
-          - "192.168.1.0/24"
+          # If the host pc needs to reach services hosted on traefik
+          # - "127.0.0.1/32"
+          # local subnet allowing access within local network
+          # - "192.168.1.0/24"
     force-http:
       redirectscheme:
         scheme: 'http'
