--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.5'
 services:
   portainer:
     image: portainer/portainer-ce
+    hostname: ${PORTAINER_DOMAIN:-portainer.localhost}
     restart: unless-stopped
     networks:
       - reverse_proxy
