--- a/streaming_service/docker-compose.yml
+++ b/streaming_service/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.5'
 services:
   prowlarr:
     image: lscr.io/linuxserver/prowlarr:develop
+    hostname: ${PROWLARR_DOMAIN:-prowlarr.localhost}
     restart: unless-stopped
     networks:
       - default
@@ -21,6 +22,7 @@ services:
 
   transmission:
     image: linuxserver/transmission
+    hostname: ${TRANSMISSION_DOMAIN:-transmission.localhost}
     restart: unless-stopped
     networks:
       - default
@@ -44,6 +46,7 @@ services:
 
   sonarr:
     image: linuxserver/sonarr
+    hostname: ${SONARR_DOMAIN:-sonarr.localhost}
     restart: unless-stopped
     depends_on:
       - prowlarr
@@ -67,6 +70,7 @@ services:
 
   radarr:
     image: linuxserver/radarr
+    hostname: ${RADARR_DOMAIN:-radarr.localhost}
     restart: unless-stopped
     depends_on:
       - prowlarr
@@ -90,6 +94,7 @@ services:
 
   bazarr:
     image: linuxserver/bazarr
+    hostname: ${BAZARR_DOMAIN:-bazarr.localhost}
     restart: unless-stopped
     networks:
       - default
@@ -110,6 +115,7 @@ services:
 
   jellyfin:
     image: linuxserver/jellyfin
+    hostname: ${JELLYFIN_DOMAIN:-jellyfin.localhost}
     restart: unless-stopped
     networks:
       - default
