--- a/streaming_service/.env.example
+++ b/streaming_service/.env.example
@@ -1,6 +1,7 @@
 ## Traefik Settings
 PROWLARR_DOMAIN=prowlarr.localhost
 TRANSMISSION_DOMAIN=transmission.localhost
+QBITTORRENT_DOMAIN=qbittorrent.localhost
 SONARR_DOMAIN=sonarr.localhost
 RADARR_DOMAIN=radarr.localhost
 BAZARR_DOMAIN=bazarr.localhost
