--- a/streaming_service/docker-compose.yml
+++ b/streaming_service/docker-compose.yml
@@ -20,6 +20,26 @@ services:
       - "traefik.http.routers.prowlarr.middlewares=local-service@file"
       - "traefik.http.services.prowlarr.loadbalancer.server.port=9696"
 
+  qbittorrent:
+    image: linuxserver/qbittorrent
+    hostname: ${QBITTORRENT_DOMAIN:-qbittorrent.localhost}
+    restart: unless-stopped
+    networks:
+      - default
+      - reverse_proxy
+    volumes:
+      - qbittorrent:/config
+      - ${STORAGE_PATH:-./data}/downloads:/downloads
+    env_file:
+      - .env
+    labels:
+      - "traefik.enable=true"
+      # HTTP router
+      - "traefik.http.routers.qbittorrent.entrypoints=web"
+      - "traefik.http.routers.qbittorrent.rule=Host(`${QBITTORRENT_DOMAIN:-qbittorrent.localhost}`)"
+      - "traefik.http.routers.qbittorrent.middlewares=local-service@file"
+      - "traefik.http.services.qbittorrent.loadbalancer.server.port=8080"
+
   transmission:
     image: linuxserver/transmission
     hostname: ${TRANSMISSION_DOMAIN:-transmission.localhost}
@@ -146,6 +166,7 @@ volumes:
   bazarr:
   jellyfin:
   transmission:
+  qbittorrent:
 
 networks:
   reverse_proxy:
