Added port for qbittorrent

--- a/streaming_service/docker-compose.yml
+++ b/streaming_service/docker-compose.yml
@@ -27,6 +27,9 @@ services:
     networks:
       - default
       - reverse_proxy
+    ports:
+      - "6881:6881"
+      - "6881:6881/udp"
     volumes:
       - qbittorrent:/config
       - ${STORAGE_PATH:-./data}/downloads:/downloads
