Added depends_on for netdata proxy

--- a/netdata/docker-compose.yml
+++ b/netdata/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: netdata/netdata
     hostname: ${NETDATA_DOMAIN:-netdata.localhost}
     restart: unless-stopped
+    depends_on:
+      - proxy
     networks:
       - default
       - reverse_proxy
