Switched mount to config

--- a/ddclient/docker-compose.yml
+++ b/ddclient/docker-compose.yml
@@ -2,7 +2,12 @@ services:
   ddclient:
     image: lscr.io/linuxserver/ddclient:latest
     restart: unless-stopped
-    volumes:
-      - ./ddclient.conf:/config/ddclient.conf
+    configs:
+      - source: conf
+        target: /config/ddclient.conf
     env_file:
       - .env
+
+configs:
+  conf:
+    file: ./ddclient.conf
