--- a/paperless_ng/.env.example
+++ b/paperless_ng/.env.example
@@ -27,3 +27,9 @@ PAPERLESS_OCR_PAGES=1
 PAPERLESS_TASK_WORKERS=2
 PAPERLESS_THREADS_PER_WORKER=1
 PAPERLESS_WEBSERVER_WORKERS=1
+
+
+## Django CSRF and Domain settings
+PAPERLESS_URL=
+PAPERLESS_ALLOWED_HOSTS=
+PAPERLESS_CSRF_TRUSTED_ORIGINS=
