--- a/paperless_ng/.env.example
+++ b/paperless_ng/.env.example
@@ -1,6 +1,9 @@
 ## Traefik Settings
 PAPERLESS_DOMAIN=
 
+## Django CSRF and Domain settings
+PAPERLESS_URL=http://${PAPERLESS_DOMAIN:-paperless.localhost}
+
 ## Docker Settings
 # The UID and GID of the user used to run paperless in the container. Set this
 # to your UID and GID on the host so that you have write access to the
@@ -27,9 +30,3 @@ PAPERLESS_OCR_PAGES=1
 PAPERLESS_TASK_WORKERS=2
 PAPERLESS_THREADS_PER_WORKER=1
 PAPERLESS_WEBSERVER_WORKERS=1
-
-
-## Django CSRF and Domain settings
-PAPERLESS_URL=
-PAPERLESS_ALLOWED_HOSTS=
-PAPERLESS_CSRF_TRUSTED_ORIGINS=
