--- a/nextcloud/.env.example
+++ b/nextcloud/.env.example
@@ -1,14 +1,22 @@
+# Traefik Configuration
+NEXTCLOUD_DOMAIN=
+
 # Nextcloud configuration
 ## User
 NEXTCLOUD_ADMIN_USER=admin
 NEXTCLOUD_ADMIN_PASSWORD=password
 
+## Database configuration
+MYSQL_DATABASE=nextcloud
+MYSQL_USER=nextcloud
+MYSQL_PASSWORD=nextcloud
+
 ## Domain and proxy
 ### More info available at
 ### https://docs.nextcloud.com/server/latest/admin_manual/configuration_server/reverse_proxy_configuration.html
-TRUSTED_PROXIES=
+TRUSTED_PROXIES=${NEXTCLOUD_DOMAIN:-nextcloud.localhost}
 OVERWRITEHOST=
-OVERWRITEPROTOCOL=https
+OVERWRITEPROTOCOL=
 
 ## Email
 ### More info available at
