--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -1,36 +1,47 @@
 services:
   app:
-    image: 'nextcloud'
-    container_name: nextcloud
+    image: nextcloud:24.0.3-apache
     restart: unless-stopped
     depends_on:
-      - db
+      - database
+    networks:
+      - default
+      - reverse_proxy
     volumes:
       - data:/var/www/html
+    labels:
+      - "traefik.enable=true"
+      # HTTP router
+      - "traefik.http.routers.nextcloud.entrypoints=web"
+      - "traefik.http.routers.nextcloud.rule=Host(`${NEXTCLOUD_DOMAIN:-nextcloud.localhost}`)"
+      - "traefik.http.routers.nextcloud.middlewares=force-https@file"
+      # HTTPS router
+      - "traefik.http.routers.nextcloud-https.entrypoints=websecure"
+      - "traefik.http.routers.nextcloud-https.rule=Host(`${NEXTCLOUD_DOMAIN:-nextcloud.localhost}`)"
+      - "traefik.http.routers.nextcloud-https.tls=true"
+      - "traefik.http.routers.nextcloud-https.tls.certresolver=letsencrypt"
     env_file:
       - .env
     environment:
-      POSTGRES_HOST: db
-      POSTGRES_DB: nextcloud
-      POSTGRES_USER: nextcloud
-      POSTGRES_PASSWORD: nextcloud
-    networks:
-      - default
-      - nginx
-  db:
-    image: 'postgres'
+      MYSQL_HOST: database
+  database:
+    image: mariadb:10.8
     restart: unless-stopped
+    healthcheck:
+      test: [ "CMD-SHELL", "mysqladmin --user=$MYSQL_USER --password=$MYSQL_PASSWORD ping --silent" ]
+      start_period: 10s
     volumes:
-      - db:/var/lib/postgresql/data
+      - database:/var/lib/mysql
     environment:
-      POSTGRES_DB: nextcloud
-      POSTGRES_USER: nextcloud
-      POSTGRES_PASSWORD: nextcloud
+      MARIADB_RANDOM_ROOT_PASSWORD: "true"
+      MARIADB_DATABASE: "${MYSQL_DATABASE}"
+      MARIADB_USER: "${MYSQL_USER}"
+      MARIADB_PASSWORD: "${MYSQL_PASSWORD}"
 
 networks:
-  nginx:
+  reverse_proxy:
     external: true
 
 volumes:
   data:
-  db:
+  database:
