--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   portainer:
-    image: portainer/portainer-ce
+    image: portainer/portainer-ce:2.14.1-alpine
     hostname: ${PORTAINER_DOMAIN:-portainer.localhost}
     restart: unless-stopped
     networks:
@@ -8,8 +8,6 @@ services:
     volumes: 
       - /var/run/docker.sock:/var/run/docker.sock
       - data:/data
-    command: 
-      - '--admin-password=${PORTAINER_PASSWORD}'
     labels:
       - "traefik.enable=true"
       # HTTP router
@@ -17,6 +15,8 @@ services:
       - "traefik.http.routers.portainer.rule=Host(`${PORTAINER_DOMAIN:-portainer.localhost}`)"
       - "traefik.http.routers.portainer.middlewares=local-service@file"
       - "traefik.http.services.portainer.loadbalancer.server.port=9000"
+    command: 
+      - '--admin-password=${PORTAINER_PASSWORD}'
 
 volumes:
   data:
