--- a/streaming_service/docker-compose.yml
+++ b/streaming_service/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   prowlarr:
-    image: lscr.io/linuxserver/prowlarr:develop
+    image: lscr.io/linuxserver/prowlarr:0.4.3-nightly
     hostname: ${PROWLARR_DOMAIN:-prowlarr.localhost}
     restart: unless-stopped
     networks:
@@ -8,8 +8,6 @@ services:
       - reverse_proxy
     volumes:
       - prowlarr:/config
-    env_file:
-      - .env
     labels:
       - "traefik.enable=true"
       # HTTP router
@@ -17,9 +15,10 @@ services:
       - "traefik.http.routers.prowlarr.rule=Host(`${PROWLARR_DOMAIN:-prowlarr.localhost}`)"
       - "traefik.http.routers.prowlarr.middlewares=local-service@file"
       - "traefik.http.services.prowlarr.loadbalancer.server.port=9696"
+    env_file: .env
 
   qbittorrent:
-    image: linuxserver/qbittorrent
+    image: lscr.io/linuxserver/qbittorrent:4.4.3
     hostname: ${QBITTORRENT_DOMAIN:-qbittorrent.localhost}
     restart: unless-stopped
     networks:
@@ -31,8 +30,6 @@ services:
     volumes:
       - qbittorrent:/config
       - ${STORAGE_PATH:-./data}/downloads:/downloads
-    env_file:
-      - .env
     labels:
       - "traefik.enable=true"
       # HTTP router
@@ -40,9 +37,10 @@ services:
       - "traefik.http.routers.qbittorrent.rule=Host(`${QBITTORRENT_DOMAIN:-qbittorrent.localhost}`)"
       - "traefik.http.routers.qbittorrent.middlewares=local-service@file"
       - "traefik.http.services.qbittorrent.loadbalancer.server.port=8080"
+    env_file: .env
 
   sonarr:
-    image: linuxserver/sonarr
+    image: lscr.io/linuxserver/sonarr:3.0.8
     hostname: ${SONARR_DOMAIN:-sonarr.localhost}
     restart: unless-stopped
     depends_on:
@@ -55,8 +53,6 @@ services:
       - sonarr:/config
       - ${STORAGE_PATH:-./data}/media/tv:/tv
       - ${STORAGE_PATH:-./data}/downloads:/downloads
-    env_file:
-      - .env
     labels:
       - "traefik.enable=true"
       # HTTP router
@@ -64,9 +60,10 @@ services:
       - "traefik.http.routers.sonarr.rule=Host(`${SONARR_DOMAIN:-sonarr.localhost}`)"
       - "traefik.http.routers.sonarr.middlewares=local-service@file"
       - "traefik.http.services.sonarr.loadbalancer.server.port=8989"
+    env_file: .env
 
   radarr:
-    image: linuxserver/radarr
+    image: lscr.io/linuxserver/radarr:4.1.0
     hostname: ${RADARR_DOMAIN:-radarr.localhost}
     restart: unless-stopped
     depends_on:
@@ -79,8 +76,6 @@ services:
       - radarr:/config
       - ${STORAGE_PATH:-./data}/media/movies:/movies
       - ${STORAGE_PATH:-./data}/downloads:/downloads
-    env_file:
-      - .env
     labels:
       - "traefik.enable=true"
       # HTTP router
@@ -88,9 +83,10 @@ services:
       - "traefik.http.routers.radarr.rule=Host(`${RADARR_DOMAIN:-radarr.localhost}`)"
       - "traefik.http.routers.radarr.middlewares=local-service@file"
       - "traefik.http.services.radarr.loadbalancer.server.port=7878"
+    env_file: .env
 
   bazarr:
-    image: linuxserver/bazarr
+    image: lscr.io/linuxserver/bazarr:1.1.0
     hostname: ${BAZARR_DOMAIN:-bazarr.localhost}
     restart: unless-stopped
     depends_on:
@@ -103,8 +99,6 @@ services:
       - bazarr:/config
       - ${STORAGE_PATH:-./data}/media/movies:/mnt/data/media/movies
       - ${STORAGE_PATH:-./data}/media/tv:/mnt/data/media/tv
-    env_file:
-      - .env
     labels:
       - "traefik.enable=true"
       # HTTP router
@@ -112,9 +106,10 @@ services:
       - "traefik.http.routers.bazarr.rule=Host(`${BAZARR_DOMAIN:-bazarr.localhost}`)"
       - "traefik.http.routers.bazarr.middlewares=local-service@file"
       - "traefik.http.services.bazarr.loadbalancer.server.port=6767"
+    env_file: .env
 
   jellyfin:
-    image: linuxserver/jellyfin
+    image: lscr.io/linuxserver/jellyfin:10.8.1
     hostname: ${JELLYFIN_DOMAIN:-jellyfin.localhost}
     restart: unless-stopped
     networks:
@@ -129,8 +124,6 @@ services:
       - ${STORAGE_PATH:-./data}/media:/mnt/media
       - jellyfin:/config
       - /opt/vc/lib:/opt/vc/lib
-    env_file:
-      - .env
     labels:
       - "traefik.enable=true"
       # HTTP router
@@ -138,6 +131,7 @@ services:
       - "traefik.http.routers.jellyfin.rule=Host(`${JELLYFIN_DOMAIN:-jellyfin.localhost}`)"
       - "traefik.http.routers.jellyfin.middlewares=local-service@file"
       - "traefik.http.services.jellyfin.loadbalancer.server.port=8096"
+    env_file: .env
 
 volumes:
   prowlarr:
