--- a/wireguard/docker-compose.yml
+++ b/wireguard/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   wireguard:
-    image: lscr.io/linuxserver/wireguard
+    image: lscr.io/linuxserver/wireguard:1.0.20210914
     restart: unless-stopped
     cap_add:
       - NET_ADMIN
@@ -10,5 +10,4 @@ services:
     volumes:
       - ./config:/config
       - /lib/modules:/lib/modules
-    env_file:
-      - .env
+    env_file: .env
