--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -23,14 +23,16 @@ services:
       - --providers.docker.network=reverse_proxy
       - --entryPoints.web.address=:80
       - --entryPoints.websecure.address=:443
+      - --entrypoints.websecure.forwardedHeaders.trustedIPs=173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/13,104.24.0.0/14,172.64.0.0/13,131.0.72.0/22
       - --providers.file.filename=/app/configuration.yaml
-      - --certificatesresolvers.letsencrypt.acme.email=bailetti.tommaso@gmail.com
-      - --certificatesresolvers.letsencrypt.acme.storage=/certificates/acme.json
-      - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
+            - --certificatesResolvers.cloudflare.acme.storage=/acme.json
+      - --certificatesResolvers.cloudflare.acme.dnsChallenge.provider=cloudflare
+      - --certificatesResolvers.cloudflare.acme.dnsChallenge.resolvers=1.1.1.1:53,1.0.0.1:53
       - --certificatesresolvers.letsencrypt-staging.acme.email=bailetti.tommaso@gmail.com
       - --certificatesresolvers.letsencrypt-staging.acme.storage=/certificates/acme-staging.json
       - --certificatesresolvers.letsencrypt-staging.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
       - --certificatesresolvers.letsencrypt-staging.acme.tlschallenge=true
+    env_file: .env
 
   proxy:
     image: tecnativa/docker-socket-proxy
