--- a/paperless_ng/docker-compose.yml
+++ b/paperless_ng/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       - "traefik.http.routers.paperless-https.entrypoints=websecure"
       - "traefik.http.routers.paperless-https.rule=Host(`${PAPERLESS_DOMAIN:-paperless.localhost}`)"
       - "traefik.http.routers.paperless-https.tls=true"
-      - "traefik.http.routers.paperless-https.tls.certresolver=letsencrypt-staging"
+      - "traefik.http.routers.paperless-https.tls.certresolver=cloudflare"
     env_file:
       - .env
     environment:
