No idea why the variables are just replaced

--- a/paperless_ng/.env.example
+++ b/paperless_ng/.env.example
@@ -1,8 +1,8 @@
 ## Traefik Settings
-PAPERLESS_DOMAIN=
+PAPERLESS_DOMAIN=paperless.localhost
 
 ## Django CSRF and Domain settings
-PAPERLESS_URL=http://${PAPERLESS_DOMAIN:-paperless.localhost}
+PAPERLESS_URL=http://${PAPERLESS_DOMAIN}
 
 ## Docker Settings
 # The UID and GID of the user used to run paperless in the container. Set this
