Moving to default registry

--- a/ddclient/docker-compose.yml
+++ b/ddclient/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   ddclient:
-    image: lscr.io/linuxserver/ddclient:3.9.1
+    image: linuxserver/ddclient:3.9.1
     restart: unless-stopped
     configs:
       - source: conf
