--- a/streaming_service/docker-compose.yml
+++ b/streaming_service/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   prowlarr:
-    image: lscr.io/linuxserver/prowlarr:0.4.3-nightly
+    image: linuxserver/prowlarr:0.4.3-nightly
     hostname: ${PROWLARR_DOMAIN:-prowlarr.localhost}
     restart: unless-stopped
     networks:
@@ -18,7 +18,7 @@ services:
     env_file: .env
 
   qbittorrent:
-    image: lscr.io/linuxserver/qbittorrent:4.4.3
+    image: linuxserver/qbittorrent:4.4.3
     hostname: ${QBITTORRENT_DOMAIN:-qbittorrent.localhost}
     restart: unless-stopped
     networks:
@@ -40,7 +40,7 @@ services:
     env_file: .env
 
   sonarr:
-    image: lscr.io/linuxserver/sonarr:3.0.8
+    image: linuxserver/sonarr:3.0.8
     hostname: ${SONARR_DOMAIN:-sonarr.localhost}
     restart: unless-stopped
     depends_on:
@@ -63,7 +63,7 @@ services:
     env_file: .env
 
   radarr:
-    image: lscr.io/linuxserver/radarr:4.1.0
+    image: linuxserver/radarr:4.1.0
     hostname: ${RADARR_DOMAIN:-radarr.localhost}
     restart: unless-stopped
     depends_on:
@@ -86,7 +86,7 @@ services:
     env_file: .env
 
   bazarr:
-    image: lscr.io/linuxserver/bazarr:1.1.0
+    image: linuxserver/bazarr:1.1.0
     hostname: ${BAZARR_DOMAIN:-bazarr.localhost}
     restart: unless-stopped
     depends_on:
@@ -109,7 +109,7 @@ services:
     env_file: .env
 
   jellyfin:
-    image: lscr.io/linuxserver/jellyfin:10.8.1
+    image: linuxserver/jellyfin:10.8.1
     hostname: ${JELLYFIN_DOMAIN:-jellyfin.localhost}
     restart: unless-stopped
     networks:
