Updated exposed port

--- a/streaming_service/.env.example
+++ b/streaming_service/.env.example
@@ -13,3 +13,7 @@ TZ=Europe/Rome
 
 ## Storage Settings
 STORAGE_PATH=./data
+
+## QBittorrent
+### You need to manually set this port inside the webui under Settings -> Connection -> Listening Port
+TRACKER_PORT=6881
