--- a/wireguard/docker-compose.yml
+++ b/wireguard/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   wireguard:
+    container_name: wireguard
     image: linuxserver/wireguard:1.0.20210914
     restart: unless-stopped
     ports:
