Updated minecraft storage settings

--- a/minecraft/.env.example
+++ b/minecraft/.env.example
@@ -1,6 +1,6 @@
 ## More info https://github.com/itzg/docker-minecraft-server#server-configuration
 # General
-TZ=
+TZ=Europe/Rome
 OVERRIDE_SERVER_PROPERTIES=
 
 # Server Configuration
@@ -14,10 +14,14 @@ SERVER_NAME=
 
 # Optimization Settings
 USE_AIKAR_FLAGS=true
-MEMORY=2G
+INIT_MEMORY=512M
+MAX_MEMORY=2G
 
 # Autopause Settings
 ENABLE_AUTOPAUSE=true
 MAX_TICK_TIME=-1
 AUTOPAUSE_TIMEOUT_INIT=300
 AUTOPAUSE_TIMEOUT_EST=600
+
+# Storage Settings
+STORAGE_PATH=./data
