--- a/minecraft/docker-compose.yml
+++ b/minecraft/docker-compose.yml
@@ -6,11 +6,8 @@ services:
     ports:
       - "25565:25565"
     volumes:
-      - data:/data
+      - ${STORAGE_PATH:-./data}:/data
     env_file:
       - .env
     environment:
       EULA: "TRUE"
-
-volumes:
-  data:
