--- a/netdata/docker-compose.yml
+++ b/netdata/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  netdata:
+  app:
     image: netdata/netdata:v1.35.1
     hostname: ${NETDATA_DOMAIN:-netdata.localhost}
     restart: unless-stopped
@@ -12,12 +12,15 @@ services:
       - SYS_PTRACE
     security_opt:
       - apparmor:unconfined
+    configs:
+      - source: conf
+        target: /etc/netdata/netdata.conf
+      - source: alarms
+        target: /etc/netdata/health_alarm_notify.conf
     volumes:
-      - netdataconfig:/etc/netdata
-      - ./netdata.conf:/etc/netdata/netdata.conf:ro
-      - ./health_alarm_notify.conf:/etc/netdata/health_alarm_notify.conf:ro
-      - netdatalib:/var/lib/netdata
-      - netdatacache:/var/cache/netdata
+      - config:/etc/netdata
+      - lib:/var/lib/netdata
+      - cache:/var/cache/netdata
       - /etc/passwd:/host/etc/passwd:ro
       - /etc/group:/host/etc/group:ro
       - /proc:/host/proc:ro
@@ -41,9 +44,15 @@ services:
       - CONTAINERS=1
 
 volumes:
-  netdataconfig:
-  netdatalib:
-  netdatacache:
+  config:
+  lib:
+  cache:
+
+configs:
+  alarms:
+    file: ./docker-compose.yml
+  conf:
+    file: ./health_alarm_notify.conf
 
 networks:
   reverse_proxy:
