--- a/pihole/docker-compose.yml
+++ b/pihole/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   pihole:
+    container_name: pihole
     image: pihole/pihole:2022.07.1
     hostname: ${PIHOLE_DOMAIN:-pihole.localhost}
     restart: unless-stopped
@@ -13,7 +14,7 @@ services:
       - '53:53/udp'
       - '67:67/udp'
     volumes:
-      - pihole:/etc/pihole
+      - config:/etc/pihole
       - dnsmasq:/etc/dnsmasq.d
     labels:
       - "traefik.enable=true"
@@ -27,7 +28,7 @@ services:
       DNSMASQ_LISTENING: all
 
 volumes:
-  pihole:
+  config:
   dnsmasq:
 
 networks:
