Updated enviroment with secret file

--- a/lupus-api/docker-compose.yml
+++ b/lupus-api/docker-compose.yml
@@ -7,15 +7,15 @@ services:
   database:
     image: mariadb:10.6.8
     healthcheck:
-      test: [ "CMD", "mysql", "-u${DB_USERNAME}", "-p${DB_PASSWORD}", "-e", "SELECT 1" ]
+      test: [ "CMD", "mysql", "-ulupusapi", "-plupusapi", "-e", "SELECT 1" ]
     restart: unless-stopped
     volumes:
       - database:/var/lib/mysql
     environment:
       MYSQL_RANDOM_ROOT_PASSWORD: true
-      MYSQL_DATABASE: ${DB_DATABASE}
-      MYSQL_USER: ${DB_USERNAME}
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: lupusapi
+      MYSQL_USER: lupusapi
+      MYSQL_PASSWORD: lupusapi
   setup:
     image: tbaile/lupus-app:develop
     depends_on:
@@ -24,8 +24,9 @@ services:
     volumes:
       - public:/app/public
       - storage:/var/www/html/storage
-    env_file:
-      - .env
+    secrets:
+      - source: env_file
+        target: /var/www/html/.env
     environment:
       ROLE: "setup"
   app:
@@ -39,8 +40,9 @@ services:
     volumes:
       - public:/app/public
       - storage:/var/www/html/storage
-    env_file:
-      - .env
+    secrets:
+      - source: env_file
+        target: /var/www/html/.env
   scheduler:
     image: tbaile/lupus-app:develop
     restart: unless-stopped
@@ -50,8 +52,9 @@ services:
     volumes:
       - public:/app/public
       - storage:/var/www/html/storage
-    env_file:
-      - .env
+    secrets:
+      - source: env_file
+        target: /var/www/html/.env
     environment:
       ROLE: "scheduler"
   queue:
@@ -63,8 +66,9 @@ services:
     volumes:
       - public:/app/public
       - storage:/var/www/html/storage
-    env_file:
-      - .env
+    secrets:
+      - source: env_file
+        target: /var/www/html/.env
     environment:
       ROLE: "queue"
   web:
@@ -95,10 +99,14 @@ services:
       FPM_PORT: 9000
 
 volumes:
-  database:
-  public:
-  storage:
+  database: {}
+  public: {}
+  storage: {}
 
 networks:
   reverse_proxy:
     external: true
+
+secrets:
+  env_file:
+    file: .env
