Updated with groups for each docker-compose

--- a/renovate.json
+++ b/renovate.json
@@ -31,6 +31,36 @@
         "linuxserver/jellyfin"
       ],
       "allowedVersions": "<= 10"
+    },
+    {
+      "groupName": "Lupus API",
+      "matchFiles": [
+        "lupus-api/docker-compose.yml"
+      ]
+    },
+    {
+      "groupName": "Netdata",
+      "matchFiles": [
+        "netdata/docker-compose.yml"
+      ]
+    },
+    {
+      "groupName": "Paperless",
+      "matchFiles": [
+        "paperless/docker-compose.yml"
+      ]
+    },
+    {
+      "groupName": "Streaming Service",
+      "matchFiles": [
+        "streaming_service/docker-compose.yml"
+      ]
+    },
+    {
+      "groupName": "Traefik",
+      "matchFiles": [
+        "traefik/docker-compose.yml"
+      ]
     }
   ]
 }
