--- a/streaming_service/.env.example
+++ b/streaming_service/.env.example
@@ -1,19 +1,15 @@
 ## Traefik Settings
 PROWLARR_DOMAIN=prowlarr.localhost
-QBITTORRENT_DOMAIN=qbittorrent.localhost
+TORRENT_DOMAIN=torrent.localhost
 SONARR_DOMAIN=sonarr.localhost
 RADARR_DOMAIN=radarr.localhost
 BAZARR_DOMAIN=bazarr.localhost
 JELLYFIN_DOMAIN=jellyfin.localhost
 
-## General 
+## General
 PUID=1000
 PGID=1000
 TZ=Europe/Rome
 
 ## Storage Settings
 STORAGE_PATH=./data
-
-## QBittorrent
-### You need to manually set this port inside the webui under Settings -> Connection -> Listening Port
-TRACKER_PORT=6881
