--- a/streaming_service/docker-compose.yml
+++ b/streaming_service/docker-compose.yml
@@ -17,26 +17,23 @@ services:
       - "traefik.http.services.prowlarr.loadbalancer.server.port=9696"
     env_file: .env
 
-  qbittorrent:
-    image: linuxserver/qbittorrent:4.4.5
-    hostname: ${QBITTORRENT_DOMAIN:-qbittorrent.localhost}
+  torrent:
+    image: linuxserver/transmission:version-3.00-r5
+    hostname: ${TORRENT_DOMAIN:-torrent.localhost}
     restart: unless-stopped
     networks:
       - default
       - reverse_proxy
-    ports:
-      - "${TRACKER_PORT:-6881}:${TRACKER_PORT:-6881}"
-      - "${TRACKER_PORT:-6881}:${TRACKER_PORT:-6881}/udp"
     volumes:
-      - qbittorrent:/config
+      - torrent:/config
       - ${STORAGE_PATH:-./data}/downloads:/downloads
     labels:
       - "traefik.enable=true"
       # HTTP router
-      - "traefik.http.routers.qbittorrent.entrypoints=web"
-      - "traefik.http.routers.qbittorrent.rule=Host(`${QBITTORRENT_DOMAIN:-qbittorrent.localhost}`)"
-      - "traefik.http.routers.qbittorrent.middlewares=local-service@file"
-      - "traefik.http.services.qbittorrent.loadbalancer.server.port=8080"
+      - "traefik.http.routers.torrent.entrypoints=web"
+      - "traefik.http.routers.torrent.rule=Host(`${TORRENT_DOMAIN:-torrent.localhost}`)"
+      - "traefik.http.routers.torrent.middlewares=local-service@file"
+      - "traefik.http.services.torrent.loadbalancer.server.port=9091"
     env_file: .env
 
   sonarr:
@@ -45,7 +42,7 @@ services:
     restart: unless-stopped
     depends_on:
       - prowlarr
-      - qbittorrent
+      - torrent
     networks:
       - default
       - reverse_proxy
@@ -68,7 +65,7 @@ services:
     restart: unless-stopped
     depends_on:
       - prowlarr
-      - qbittorrent
+      - torrent
     networks:
       - default
       - reverse_proxy
@@ -134,7 +131,7 @@ volumes:
   radarr:
   bazarr:
   jellyfin:
-  qbittorrent:
+  torrent:
 
 networks:
   reverse_proxy:
