--- a/lupus-api/docker-compose.yml
+++ b/lupus-api/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       MYSQL_USER: lupusapi
       MYSQL_PASSWORD: lupusapi
   setup:
-    image: tbaile/lupus-app:develop
+    image: tbaile/lupus-api-app:develop
     depends_on:
       - database
       - redis
@@ -30,7 +30,7 @@ services:
     environment:
       ROLE: "setup"
   app:
-    image: tbaile/lupus-app:develop
+    image: tbaile/lupus-api-app:develop
     healthcheck:
       test: [ "CMD", "php-fpm-healthcheck" ]
     restart: unless-stopped
@@ -44,7 +44,7 @@ services:
       - source: env_file
         target: /var/www/html/.env
   scheduler:
-    image: tbaile/lupus-app:develop
+    image: tbaile/lupus-api-app:develop
     restart: unless-stopped
     depends_on:
       setup:
@@ -58,7 +58,7 @@ services:
     environment:
       ROLE: "scheduler"
   queue:
-    image: tbaile/lupus-app:develop
+    image: tbaile/lupus-api-app:develop
     restart: unless-stopped
     depends_on:
       setup:
@@ -72,7 +72,7 @@ services:
     environment:
       ROLE: "queue"
   web:
-    image: tbaile/lupus-web:develop
+    image: tbaile/lupus-api-web:develop
     healthcheck:
       test: [ "CMD", "curl", "--fail", "--silent", "--output", "/dev/null", "http://localhost" ]
     restart: unless-stopped
